syntax = "proto3";

option go_package = "github.com/ritmatter/gocounter/counter";

package counter;

service Counter {
  rpc Increment (IncrementRequest) returns (IncrementResponse) {}
}

message IncrementRequest {
  int64 amount = 1;
}

message IncrementResponse {
  int64 new_total = 1;
}
